<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/missionsItem"
        android:enabled="true"
        android:icon="@drawable/missions"
        android:title="@string/misje" />
    <item
        android:id="@+id/avatarsItem"
        android:enabled="true"
        android:icon="@drawable/avatars"
        android:title="@string/avatary" />
    <item
        android:id="@+id/bitcoinsItem"
        android:enabled="true"
        android:icon="@drawable/bitcoin"
        android:title="@string/bitcoin_y" />
    <item
        android:id="@+id/exacoinsItem"
        android:enabled="true"
        android:icon="@drawable/exacoins"
        android:title="@string/exacoin_y" />
    <item
        android:id="@+id/pointsItem"
        android:enabled="true"
        android:icon="@drawable/points"
        android:title="@string/punkty" />
</menu>